@startuml

skinparam monochrome true
skinparam classAttributeIconSize 0

together dataAndStatusGroup{
    class Data{
        +vGuestBook[]
        +bChangeState = true
        +nPreviousRandomNumber=1
    }

    class Status{
        +setStatus()
        +setStatusMessage()
        +getStatus()
        +getStatusMessage()
        -bExecutionStatus = true
        -spExecMessage
    }
}
class StateMachine{
    -spData
    -spStatus
    -spActualState
    -spNextState
    -spState1
    -spState2
    -spState3
    -spState4
    +runSTM()
    #checkForChangingState()
    #changeState()
}

class State{
    #spData
    #spStatus
    #spPossibleNextStates
    #spNextState
    +addPossibleNextStates()
    +returnNextState()
    {abstract}+executeStateTask()
    +setDataPointer()
    +setStatusPointer()
}
class State1{
    +executeStateTask()
}
class State2{
    +executeStateTask()
}
class State3{
    +executeStateTask()
}
class State4{
    +executeStateTask()
}

State <|-- State1
State <|-- State2
State <|-- State3
State <|-- State4


StateMachine *--> State1
StateMachine *--> State2
StateMachine *--> State3
StateMachine *--> State4

StateMachine ..> State:<<uses>>

Data -[hidden]down- Status
StateMachine o--> Data
StateMachine o--> Status

StateMachine -[hidden]right-- Data
StateMachine -[hidden]right-- Status

@enduml
